style.css
@font-face {
  font-family: "Figtree";
  src: url("./assets/fonts/static/Figtree-ExtraBold.ttf") format("truetype");
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Figtree";
  src: url("./assets/fonts/static/Figtree-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

:root {
  --c-accent-yellow: hsl(47, 88%, 63%);
  --c-gray-950: hsl(0, 0%, 7%);
  --c-gray-500: hsl(0, 0%, 42%);
  --c-white: hsl(0, 0%, 100%);

  /* Breakpoint Variables */
  --bp-mobile: 23.4375rem; /* 375px */
  --bp-tablet: 48rem; /* 768px */
  --bp-desktop: 64rem; /* 1024px */
  --bp-desktop-lg: 90rem; /* 1440px */

  /* Typography Variables */
  --ff-figtree: "Figtree", sans-serif;

  /* Text Preset 1 - Figtree Extra Bold */
  --fs-preset-1: 1.45rem; /* 24px */
  --fw-preset-1: 800; /* Extra Bold */
  --lh-preset-1: 150%;
  --ls-preset-1: 0px;

  /* Text Preset 2 - Figtree Medium */
  --fs-preset-2: 1rem; /* 16px */
  --fw-preset-2: 500; /* Medium */
  --lh-preset-2: 150%;
  --ls-preset-2: 0px;

  /* Text Preset 3 - Figtree Medium */
  --fs-preset-3: 0.875rem; /* 14px */
  --fw-preset-3: 500; /* Medium */
  --lh-preset-3: 150%;
  --ls-preset-3: 0px;

  /* Text Preset 3 Bold - Figtree Extra Bold */
  --fs-preset-3-bold: 0.875rem; /* 14px */
  --fw-preset-3-bold: 800; /* Extra Bold */
  --lh-preset-3-bold: 150%;
  --ls-preset-3-bold: 0px;
}

body {
  background-color: var(--c-accent-yellow);
  font-family: var(--ff-figtree);
}

/* Block */
.card {
  max-width: 21rem;
  justify-self: center;
  margin-block: clamp(3rem);
  background-color: var(--c-white);
  border: 1px solid black;
  border-radius: 1.25rem;
  box-shadow: 7px 7px 0px black;
}

/* Elements */
.card__container {
  padding: 1.5rem;
}

.card__banner {
  width: 100%;
  border-radius: 0.625rem;
  margin-bottom: 1.5rem;
  justify-self: center;
}

.card__tag {
  display: block;
  background-color: var(--c-accent-yellow);
  padding: 0.25rem 0.75rem;
  margin-bottom: 0.75rem;
  font-weight: var(--fw-preset-1);
  width: fit-content;
  border-radius: 0.25rem;
  list-style: none;
}

.card__tag li {
  list-style: none;
}

.card__date {
  font-size: var(--fs-preset-3);
  font-weight: var(--fw-preset-3);
  line-height: var(--lh-preset-3);
  letter-spacing: var(--ls-preset-3);
}

.card__title {
  text-wrap: pretty;
  font-weight: var(--fw-preset-1);
  line-height: var(--lh-preset-1);
  letter-spacing: var(--ls-preset-1);
  font-size: var(--fs-preset-1);
  transition: color 300ms ease-in-out;
}

.card__summary {
  font-size: var(--fs-preset-2);
  font-weight: var(--fw-preset-2);
  line-height: var(--lh-preset-2);
  letter-spacing: var(--ls-preset-2);
  color: var(--c-gray-500);
}

.card__author {
  display: flex;
  align-items: center;
  gap: 1rem;
  font-size: var(--fs-preset-3-bold);
  font-weight: var(--fw-preset-3-bold);
  letter-spacing: var(--ls-preset-3-bold);
  line-height: var(--lh-preset-3-bold);
  color: var(--c-gray-950);
}

.card__author-name {
  display: inline-block;
}

.card__content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.card:hover .card__title {
  color: var(--c-accent-yellow);
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution__link {
  color: hsl(228, 45%, 44%);
}

/* Responsive */
@media (min-width: 48rem) {
  .card {
    max-width: clamp(24rem, 28vw, 26rem);
  }
}

